kubernetes/namespaces/default/blink/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blink
  annotations:
    prometheus.io/probe: 'true'
spec:
  selector:
    app: blink
  ports:
  - name: blink
    port: 80
    targetPort: blink
